<resources>
    <string name="app_name">ListaCompras</string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="adicionar">Adicionar</string>
    <string name="cadastrar_produto">Cadastrar Produto</string>
    <string name="quantidade">Quantidade</string>
    <string name="r_0_00">R$ 0.00</string>
    <string name="total_0_00">TOTAL: 0,00</string>
    <string name="adicionar_itens">Adicionar itens</string>
    <string name="qtde">Qtde: </string>
</resources>
